--- a/assets/component-localization-form.css
+++ b/assets/component-localization-form.css
@@ -76,6 +76,12 @@
   background: rgb(var(--color-background));
 }
 
+
+.disclosure span {
+  color: #810001 !important;
+      font-weight: 600 !important;
+}
+
 .localization-form__select .icon-caret {
   position: absolute;
   content: '';
