--- a/assets/component-predictive-search.css
+++ b/assets/component-predictive-search.css
@@ -6,7 +6,7 @@
   border-width: var(--popup-border-width);
   border-style: solid;
   border-color: rgba(var(--color-foreground), var(--popup-border-opacity));
-  background-color: #af1917e0;
+  background-color: #810001;
   z-index: 3;
   border-bottom-right-radius: var(--popup-corner-radius);
   border-bottom-left-radius: var(--popup-corner-radius);
@@ -101,7 +101,7 @@ predictive-search[loading] .predictive-search {
   border-bottom: 0.1rem solid #ffffff;
   margin: 0 2rem;
   padding: 1.5rem 0 0.75rem;
-  color: #ffffff;
+  color: #ffffff ;
 }
 .predictive-search__heading :hover {
   color: #0cc667;
@@ -145,6 +145,9 @@ predictive-search[loading]
 .predictive-search__item:hover {
   color: #ffffff;
   background-color: rgba(var(--color-foreground), 0.04);
+}
+.predictive-search__item{
+  color: #ffffff;
 }
 
 .predictive-search__list-item[aria-selected="true"]
